--- a/firebase.json
+++ b/firebase.json
@@ -10,5 +10,13 @@
       "functions"
     ],
     "alwaysDeployFromSource": true
+  },
+  "hosting": {
+    "public": "public",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ]
   }
 }
