--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "firebase": "^12.6.0",
     "lucide-react": "^0.560.0",
     "motion": "^12.23.26",
-    "next": "16.0.8",
+    "next": "^16.0.10",
     "openai": "^6.10.0",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "snowfall": "^2.1.0",
     "three": "^0.182.0"
   },
   "devDependencies": {
