--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "openai": "^6.10.0",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "react-share": "^5.2.2",
     "snowfall": "^2.1.0",
     "three": "^0.182.0"
   },
