--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,32 +1,36 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": false,
     "noEmit": true,
-
     "module": "esnext",
     "moduleResolution": "bundler",
-
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "react-jsx",
+    "jsx": "preserve",
     "incremental": true,
     "esModuleInterop": true,
-
     "baseUrl": ".",
     "paths": {
-      "@/*": ["cube-tech/*"]
+      "@/*": [
+        "cube-tech/*"
+      ]
     },
-
     "forceConsistentCasingInFileNames": true,
     "useDefineForClassFields": true,
-
-    "plugins": [{ "name": "next" }]
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
-
   "include": [
     "next-env.d.ts",
     "**/*.ts",
@@ -34,6 +38,8 @@
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts"
   ],
-
-  "exclude": ["node_modules", ".next"]
+  "exclude": [
+    "node_modules",
+    ".next"
+  ]
 }
