--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "make-admin": "node scripts/make-admin.js"
   },
   "dependencies": {
-    "@react-three/drei": "^10.7.7",
-    "@react-three/fiber": "9.4.2",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.18.0",
     "firebase": "^10.12.5",
     "firebase-admin": "^12.6.0",
     "lucide-react": "^0.560.0",
@@ -23,19 +23,20 @@
     "react-dom": "18.2.0",
     "react-share": "^5.2.2",
     "snowfall": "^2.1.0",
-    "three": "^0.182.0",
+    "three": "^0.160.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18.3.27",
+    "@types/react-dom": "^18.3.7",
+    "@types/three": "^0.160.0",
     "@types/uuid": "^10.0.0",
-    "autoprefixer": "^10.4.22",
+    "autoprefixer": "^10.4.23",
     "eslint": "^9",
     "eslint-config-next": "16.0.8",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5"
   },
   "engines": {
