--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": [
-        "cube-tech/*"
+        "./*"
       ]
     },
     "forceConsistentCasingInFileNames": true,
@@ -33,10 +33,10 @@
   },
   "include": [
     "next-env.d.ts",
+    "types/**/*.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts",
-    ".next/dev/types/**/*.ts"
+    ".next/types/**/*.ts"
   ],
   "exclude": [
     "node_modules",
