--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "firebase-admin": "^12.6.0",
     "lucide-react": "^0.560.0",
     "motion": "^12.23.26",
-    "next": "14.2.5",
+    "next": "^14.2.35",
     "openai": "^4.56.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
